# fs-daemon-rs

./: Cargo.toml  README.md
.cargo/: config.toml
src/: file_watcher.rs  main.rs  notifier.rs
